complete site layout bug fixes and cosmetic improvements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -171,3 +171,11 @@ pre[class*='language-'] {
 .prose :where(code):not(:where([class~='not-prose'] *))::after {
 	content: '';
 }
+
+.prose a {
+	@apply text-blue-900 dark:text-blue-600;
+}
+
+.prose a:hover {
+	@apply opacity-90;
+}
